--- a/media/gui/styles.css
+++ b/media/gui/styles.css
@@ -2,16 +2,46 @@ body {
 	background-color: #1e1e1e;
 	color: #ffffff;
 	font-family: Arial, sans-serif;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%;
+	padding: 10px;
 }
+#plotContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 90%;
+}
+
 #variableSelect,
 input {
-	margin-bottom: 10px;
-	background-color: #2d2d2d;
+	background-color: #1e1e1e;
 	color: #ffffff;
-	border: 1px solid #444;
+	border: 1px solid #007acc;
+	padding: 10px;
 }
 #axisControls {
 	display: flex;
+	flex-direction: row;
 	justify-content: space-between;
-	margin-bottom: 10px;
+	gap: 5px;
+}
+#plotControls {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 10px;
+}
+button {
+	background-color: #007acc;
+	color: white;
+	border: none;
+	padding: 10px;
+	cursor: pointer;
+	border-radius: 2px;
+}
+button:hover {
+	background-color: #005f99;
 }
