--- a/media/gui/styles.css
+++ b/media/gui/styles.css
@@ -2,17 +2,88 @@ body {
 	background-color: #1e1e1e;
 	color: #ffffff;
 	font-family: Arial, sans-serif;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	gap: 10px;
 	padding: 10px;
+	width: 90%;
+	margin-left: 20px;
 }
+
 #plotContainer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 90%;
+	width: 100%;
+	border: #808080 1px solid;
+	padding: 5px;
+}
+
+#guiElementsContainer {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	gap: 10px;
+}
+
+#variableInputsContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	gap: 5px;
+	border: #808080 1px solid;
+	padding: 5px;
+}
+
+.variableInputsContainer h3 {
+	margin: 5px;
+}
+
+.variableInput {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	gap: 5px;
+	text-align: center;
+}
+
+.variableInput input {
+	min-width: 0;
+	max-width: 100%;
+	box-sizing: border-box;
+}
+
+#slidersContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	gap: 5px;
+	border: #808080 1px solid;
+	padding: 5px;
+}
+
+.slidersContainer h3 {
+	margin: 5px;
+}
+
+.sliderInput {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	gap: 5px;
+	text-align: center;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.sliderInput input {
+	min-width: 0;
+	max-width: 100%;
+	box-sizing: border-box;
 }
 
 #variableSelect,
@@ -22,18 +93,21 @@ input {
 	border: 1px solid #007acc;
 	padding: 10px;
 }
+
 #axisControls {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	gap: 5px;
 }
+
 #plotControls {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	gap: 10px;
 }
+
 button {
 	background-color: #007acc;
 	color: white;
@@ -42,6 +116,7 @@ button {
 	cursor: pointer;
 	border-radius: 2px;
 }
+
 button:hover {
 	background-color: #005f99;
 }
