--- a/media/gui/styles.css
+++ b/media/gui/styles.css
@@ -86,6 +86,16 @@ body {
 	box-sizing: border-box;
 }
 
+#buttonsContainer {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	gap: 5px;
+	border: #808080 1px solid;
+	padding: 5px;
+}
+
 #variableSelect,
 input {
 	background-color: #1e1e1e;
