--- a/media/sidebar/styles.css
+++ b/media/sidebar/styles.css
@@ -131,20 +131,11 @@ body {
 
 .buttonInput {
 	/* each div has 4 input text boxes and we want them to display as a 2x2 grid */
-	display: grid;
-	grid-template-columns: 1fr 1fr;
+	display: flex;
+	flex-direction: column;
 	gap: 5px;
 	padding: 5px;
 	border: #808080 1px solid;
-}
-
-.buttonInput input:nth-child(1),
-.buttonInput input:nth-child(2) {
-	grid-column: span 1;
-}
-
-.buttonInput input:nth-child(3) {
-	grid-column: span 2;
 }
 
 .buttonInput input {
