--- a/media/sidebar/styles.css
+++ b/media/sidebar/styles.css
@@ -16,6 +16,13 @@ body {
 	gap: 5px;
 }
 
+.addSubtractButtons {
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	align-items: center;
+}
+
 .variableInputs {
 	display: flex;
 	flex-direction: column;
