--- a/media/gui/styles.css
+++ b/media/gui/styles.css
@@ -15,8 +15,10 @@ body {
 	flex-direction: column;
 	align-items: center;
 	width: 100%;
+}
+
+#plot {
 	border: #808080 1px solid;
-	padding: 5px;
 }
 
 #guiElementsContainer {
@@ -105,17 +107,62 @@ input {
 }
 
 #axisControls {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	/* Use CSS Grid to layout the input boxes */
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto auto auto;
 	gap: 5px;
+	padding: 5px;
+	border: #808080 1px solid;
+}
+
+#axisControls input:nth-child(1),
+#axisControls input:nth-child(2) {
+	grid-column: span 1; /* Each input occupies one column */
+}
+
+#axisControls button:nth-child(3),
+#axisControls button:nth-child(4) {
+	grid-column: span 1; /* Each input occupies one column */
+}
+
+#axisControls button:nth-child(5) {
+	grid-column: 1 / -1; /* Span the first input across both columns */
+}
+
+#axisControls input {
+	min-width: 0;
+	max-width: 100%;
+	box-sizing: border-box;
+}
+
+.traceControl {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.traceLabels {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 5px;
+	padding: 5px;
+	border: #808080 1px solid;
+}
+
+.colorPicker {
+	padding: 0px;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
 }
 
 #plotControls {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	gap: 10px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	width: 100%;
+	gap: 5px;
+	padding: 5px;
 }
 
 button {
