--- a/media/gui/styles.css
+++ b/media/gui/styles.css
@@ -98,7 +98,7 @@ body {
 	padding: 5px;
 }
 
-#variableSelect,
+.variableSelect,
 input {
 	background-color: #1e1e1e;
 	color: #ffffff;
@@ -110,7 +110,7 @@ input {
 	/* Use CSS Grid to layout the input boxes */
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: auto auto auto;
+	grid-template-rows: auto auto;
 	gap: 5px;
 	padding: 5px;
 	border: #808080 1px solid;
@@ -124,10 +124,6 @@ input {
 #axisControls button:nth-child(3),
 #axisControls button:nth-child(4) {
 	grid-column: span 1; /* Each input occupies one column */
-}
-
-#axisControls button:nth-child(5) {
-	grid-column: 1 / -1; /* Span the first input across both columns */
 }
 
 #axisControls input {
