Fixed styling for plot controls.

--- a/media/gui/styles.css
+++ b/media/gui/styles.css
@@ -110,7 +110,7 @@ input {
 	/* Use CSS Grid to layout the input boxes */
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	grid-template-rows: auto auto;
+	grid-template-rows: auto auto auto;
 	gap: 5px;
 	padding: 5px;
 	border: #808080 1px solid;
@@ -126,24 +126,28 @@ input {
 	grid-column: span 1; /* Each input occupies one column */
 }
 
+#axisControls button:nth-child(5) {
+	grid-column: 1 / -1; /* Span the first input across both columns */
+}
+
 #axisControls input {
 	min-width: 0;
 	max-width: 100%;
 	box-sizing: border-box;
 }
 
-.traceControl {
+#traceControls {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	gap: 5px;
+	padding: 5px;
+	border: #808080 1px solid;
 }
 
 .traceLabels {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 5px;
-	padding: 5px;
-	border: #808080 1px solid;
 }
 
 .colorPicker {
