--- a/media/gui/styles.css
+++ b/media/gui/styles.css
@@ -3,10 +3,10 @@ body {
 	color: #ffffff;
 	font-family: Arial, sans-serif;
 	display: grid;
-	grid-template-columns: 1fr 2fr;
-	gap: 10px;
-	padding: 10px;
-	width: 90%;
+	grid-template-columns: 1fr 1fr;
+	gap: 5px;
+	padding: 5px;
+	width: 95%;
 	margin-left: 20px;
 }
 
@@ -90,8 +90,9 @@ body {
 
 #buttonsContainer {
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
 	gap: 5px;
 	border: #808080 1px solid;
 	padding: 5px;
